<resources>
    <string name="app_name">Stock Market Ground</string>
    <string name="stock_market_ground">Stock Market Ground</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="here_you_play_win_and_earn">Follow experts, discover\nnew strategies, and build your\nportfolio like a pro</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="dots">●●●●●●●●●●</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_account_detail">Enter your\naccount detail.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_agree_to_smg_terms_of_service">I agree to SMG Terms of Service</string>
    <string name="bullet_point_string">• Terms of Service \n• Privacy Policy</string>
    <string name="keep_me_promotions_string">Keep me updated about SMG\nnews and promotions.</string>
    <string name="logout">Logout</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="we_just_need_your_email_to_send_your_password_reset_instructions">We just need your email to send\nyour password reset instructions.</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="arena">Arena</string>
    <string name="portfolio">Portfolio</string>
    <string name="stocks">Stocks</string>
    <string name="please_wait">Please Wait…</string>
    <string name="thursday_maestro">Thursday Maestro</string>
    <string name="dateFormat">03 jun 2021 | 09:35 AM</string>
    <string name="prize">Prize</string>
    <string name="dummyNum">₹ 1,05,987</string>
    <string name="entry">Entry</string>
    <string name="leftTxt">Left: 1123</string>
    <string name="maxTxt">Max: 1200</string>
    <string name="timeTxt">12 hr 48 min left</string>
    <string name="daily">Daily</string>
    <string name="mega">Mega</string>
    <string name="_11">₹ 11</string>
</resources>