<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:elevation="@dimen/_6sdp"
    app:cardCornerRadius="@dimen/_10sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:text="@string/thursday_maestro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@android:drawable/sym_action_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dateFormat"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_prize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prize"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toStartOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_prize_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dummyNum"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_prize" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/entry"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="@id/iv_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_entry_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/_11"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_entry" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:gravity="center_vertical"
                android:text="@string/leftTxt"
                app:drawableStartCompat="@android:drawable/presence_away" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_3sdp"
                android:gravity="center_vertical"
                android:text="@string/maxTxt"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@android:drawable/presence_away" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/timeTxt"
            android:textColor="#FF5722"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lay_stats" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_chat_self"
            android:backgroundTint="#9FC2D0"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/daily"
            android:textAllCaps="true"
            android:textColor="@color/whiteActual"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_chat_self"
            android:backgroundTint="#FF5722"
            android:gravity="end"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/mega"
            android:textAllCaps="true"
            android:textColor="@color/whiteActual"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

