<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/_12sdp"
    tools:context=".ui.fragments.authFragments.ForgetPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_34sdp"
        android:padding="@dimen/_16sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.smg.stock_market_ground.utils.customViews.textViews.TextViewBold
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/forgot_your_password"
        android:textAlignment="center"
        android:textColor="@color/stroke"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />


    <com.smg.stock_market_ground.utils.customViews.textViews.TextViewRegular
        android:id="@+id/tv_sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/we_just_need_your_email_to_send_your_password_reset_instructions"
        android:textAlignment="center"
        android:textColor="@color/stroke"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/et_background_main"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/enter_you_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="14dp"
        android:textColor="@color/stroke"
        android:textColorHint="@color/stroke"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sub_header"
        app:layout_constraintStart_toStartOf="@+id/tv_sub_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_header" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/bt_background_white"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />


</androidx.constraintlayout.widget.ConstraintLayout>